--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "~1.8.1",
     "express": "~4.9.0",
+    "multer": "^1.4.1",
     "nunjucks": "*",
-    "pg": "^7.7.1"
+    "pg": "^7.7.1",
+    "sequelize": "^4.42.0"
   },
   "devDependencies": {
     "eslint": "^5.11.1",
