--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "multer": "^1.4.1",
     "nunjucks": "*",
     "pg": "^7.7.1",
-    "sequelize": "^4.42.0"
+    "sequelize": "^4.42.0",
+    "session-file-store": "^1.2.0"
   },
   "devDependencies": {
     "eslint": "^5.11.1",
