--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.8.1",
+    "connect-flash": "^0.1.1",
     "express": "~4.9.0",
     "express-session": "^1.15.6",
     "multer": "^1.4.1",
