--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "connect-flash": "^0.1.1",
     "express": "~4.9.0",
     "express-session": "^1.15.6",
+    "moment": "^2.23.0",
     "multer": "^1.4.1",
     "nunjucks": "*",
     "pg": "^7.7.1",
